; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c_receive_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c_receive_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_ls = type { i32 }
%struct.dlm_message = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"remove dir entry dir_nodeid %d from %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dlm_ls*, %struct.dlm_message*)* @receive_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @receive_remove(%struct.dlm_ls* %0, %struct.dlm_message* %1) #0 {
  %3 = alloca %struct.dlm_ls*, align 8
  %4 = alloca %struct.dlm_message*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.dlm_ls* %0, %struct.dlm_ls** %3, align 8
  store %struct.dlm_message* %1, %struct.dlm_message** %4, align 8
  %8 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %9 = getelementptr inbounds %struct.dlm_message, %struct.dlm_message* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %7, align 4
  %12 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %13 = call i32 @receive_extralen(%struct.dlm_message* %12)
  store i32 %13, i32* %5, align 4
  %14 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %15 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %16 = getelementptr inbounds %struct.dlm_message, %struct.dlm_message* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @dlm_hash2nodeid(%struct.dlm_ls* %14, i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 (...) @dlm_our_nodeid()
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %2
  %23 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @log_error(%struct.dlm_ls* %23, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %25)
  br label %35

27:                                               ; preds = %2
  %28 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %29 = load i32, i32* %7, align 4
  %30 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %31 = getelementptr inbounds %struct.dlm_message, %struct.dlm_message* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @dlm_dir_remove_entry(%struct.dlm_ls* %28, i32 %29, i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %27, %22
  ret void
}

declare dso_local i32 @receive_extralen(%struct.dlm_message*) #1

declare dso_local i32 @dlm_hash2nodeid(%struct.dlm_ls*, i32) #1

declare dso_local i32 @dlm_our_nodeid(...) #1

declare dso_local i32 @log_error(%struct.dlm_ls*, i8*, i32, i32) #1

declare dso_local i32 @dlm_dir_remove_entry(%struct.dlm_ls*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
